# quant_data_center_CN

./: .gitignore  AGENTS.md  AKSHARE_A_STOCK_REFACTOR_PLAN.md  ARCHITECTURE.md  CONTEXT.md  LICENSE  README.md  _test_output.txt  analyze_log.py  analyze_log2.py  analyze_log3.py  check_data.py  check_data2.py  pyproject.toml
benchmark_results/: api_benchmark_report.json  benchmark_summary.json  concurrency_benchmark_report.json  data_processing_benchmark_report.json  end_to_end_benchmark_report.json  io_benchmark_report.json  performance_test_report.md  profile_output.txt
benchmarks/: BENCHMARK_README.md  benchmark_api_calls.py  benchmark_concurrency.py  benchmark_data_processing.py  benchmark_end_to_end.py  benchmark_io_operations.py  benchmark_utils.py  run_all_benchmarks.py
config/: daily_workflow.yaml  settings.yaml  universe.yaml
docs/: DATA_REGISTRY.md  NAMING.md  akshare_stock_history_api_accessibility.md
references/: BaoStock前复权日K线数据计算简介.md  BaoStock复权因子简介.md
scripts/: audit_akshare_stock_history_apis.py  check_quality.ps1  migrate_naming_v1.py  profile_valuation_detailed.py  profile_valuation_percentile.py  run_update_daily.bat  test_weekday.bat
src/: __init__.py  cli.py  registry_server.py
tests/: conftest.py  test_adjustments.py  test_akshare_a_stock_pipeline.py  test_akshare_adapters.py  test_akshare_capital_structure.py  test_akshare_client.py  test_akshare_contract.py  test_akshare_daily_bar_calendar.py  test_akshare_financial_report.py  test_akshare_registry.py  test_akshare_runtime.py  test_akshare_stock_history_audit.py  test_baostock_client.py  test_baostock_log_parser.py  test_baostock_market_session.py  test_baostock_metadata_flush.py  test_baostock_valuation_percentile.py  test_bottleneck_concurrency_script.py  test_bottleneck_full_stage_script.py  test_capital_structure_pending.py  test_cli_provider.py  test_code_pool.py  test_data_registry.py  test_dataset_catalog.py  test_derived_cli.py  test_derived_common.py  test_derived_security_master.py  test_derived_stock_daily_bar.py  test_derived_stock_valuation.py  test_derived_update.py  test_duckdb_store.py  test_log_cleanup.py  test_market_data_provider.py  test_naming_migration.py  test_parquet_store.py  test_partition_manifest.py  test_performance_utils.py  test_pipeline_finalization.py  (+23 more)
(+204 files in other folders)
