[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-data-center"
version = "0.1.0"
description = "Windows local low-frequency quant data center built on Baostock, Parquet, and DuckDB."
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "duckdb",
    "akshare",
    "baostock",
    "pydantic",
    "pyyaml",
    "loguru",
    "tenacity",
    "click",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]",
    "pandas-stubs",
    "pre-commit",
    "pyright",
    "pytest",
    "pytest-cov",
    "ruff",
    "types-PyYAML",
]

[project.scripts]
qdc = "src.cli:cli"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config -m 'not slow'"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "performance: long-running performance or stress tests, excluded from default pytest runs",
    "slow: long-running integration, performance, or stress tests excluded from default pytest runs",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PT", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E501", "RUF012"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
